Matrix like UnderConstruction effect added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>3D-Deal.com</title>
-    </head>
 
-    <body>
-        <h1>Kop</h1>
-        <p>Paragraaf</p>
-    </body>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>3D-Deal.com (Dev)</title>
+    <script src="Source/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+
+</head>
+
+<body onload="run();" style="margin: 0; padding: 0; background-color: #FFFFFF;">
+    <canvas id="canvas" width="1920" height="1080" style="display:block; margin:0 auto;"></canvas>
+</body>
+
 </html>
