API connection fout opgelost. Ook begin gemaakt met API website.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>3D-Deal.com (Dev)</title>
+    <title>3D-Deal.com</title>
     <script src="Source/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
-
+    <script type="text/javascript" src="UnderConstruction.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="UnderConstruction.css">
 </head>
 
 <body onload="run();" style="margin: 0; padding: 0; background-color: #FFFFFF;">
-    <canvas id="canvas" width="1920" height="1080" style="display:block; margin:0 auto;"></canvas>
+    <canvas id="canvas" class="canvasStyle" width="1920px" height="1080px" style="display: block; margin: 0 auto;"></canvas>
+    <div class="DevellopCenter">
+ 
+    </div>
 </body>
 
 </html>
