--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>3D-Deal.com</title>
     <script src="Source/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="DB_Handling.js"></script>
     <script type="text/javascript" src="UnderConstruction.js"></script>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="UnderConstruction.css">
