API Automation Functions added

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
     <script type="text/javascript" src="UnderConstruction.js"></script>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="UnderConstruction.css">
+    <link rel="icon" type="image/png" href="Dev.png">
 </head>
 
 <body onload="run();" style="margin: 0; padding: 0; background-color: #FFFFFF;">
     <canvas id="canvas" class="canvasStyle" width="1920px" height="1080px" style="display: block; margin: 0 auto;"></canvas>
     <div class="DevellopCenter">
- 
+        <div class="panel">
+            <div class="panelLeft">
+                <!-- <div class="Test">Test</div> -->
+            </div>
+            <div class="panelRight"></div>
+        </div>        
     </div>
 </body>
 
