Website uitgebreid API structuur verbeterd ImageFuncions.php toegevoegd voor thumbnails

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <div class="DevellopCenter">
         <div class="panel">
             <div class="panelLeft">
-                <!-- <div class="Test">Test</div> -->
+                
             </div>
-            <div class="panelRight"></div>
+            <div class="panelRight">test
+
+            </div>
         </div>        
     </div>
 </body>
